fixed disabled field text color on Safari

--- a/app/modules/elements/assets/sass/_forms.scss
+++ b/app/modules/elements/assets/sass/_forms.scss
@@ -1,5 +1,5 @@
 //* -- FORMS -- */
-// scss-lint:disable VendorPrefix
+// scss-lint:disable VendorPrefix ImportantRule
 ::-webkit-input-placeholder {
   font-family: $font-family-sans-serif;
   color: $input-color-placeholder !important;
@@ -156,6 +156,8 @@ a.list-group-item {
     border-color: $input-border-disabled;
     color: #454545;
     cursor: $cursor-disabled;
+    -webkit-text-fill-color: #454545; // to force correct color in Safari
+    -webkit-opacity: 1;
     opacity: 1; // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655
     box-shadow: none;
   }
